# video-conf-calculator

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
models/: OngMoorsSivaraman_2012.yml
tests/: test_ong_calculator.py
vc_calculator/: __main__.py  interface.py  ong_calculator.py
