[tool.poetry]
name = "vc_calculator"
version = "0.1.0"
description = "Calculate emissions related to video conferencing"
authors = ["Ben Krikler <4083697+benkrikler@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
